--- a/angular/package.json
+++ b/angular/package.json
@@ -31,6 +31,7 @@
     "angular-calendar": "~0.29.0",
     "apexcharts": "~3.35.3",
     "bn-ng-idle": "^2.0.5",
+    "bootstrap": "^5.3.3",
     "date-fns": "~2.28.0",
     "date-picker": "^0.3.0",
     "highlight.js": "~11.5.1",
